force-app/main/default/objects/Trip__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <description>Lookup Rollup Summaries - sum of expected revenue of related opportunities</description>
    <inlineHelpText>Sum of expected revenue of related opportunities</inlineHelpText>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>