force-app/main/default/objects/Trip__c/fields/Expected_ROI__c.field-meta.xml
<CustomField>
    <fullName>Expected_ROI__c</fullName>
    <formula>Expected_Revenue__c / Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>