force-app/main/default/objects/Trip__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Where the trip was to</description>
    <inlineHelpText>City</inlineHelpText>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>